--- a/examples/01_pytest_basics/pytest.ini
+++ b/examples/01_pytest_basics/pytest.ini
@@ -1,2 +1,8 @@
 [pytest]
 # xfail_strict = True
+addopts = -ra --strict-markers
+markers = 
+    london: london devices
+    exception: test for exceptions
+    ios: ios devices
+    cisco: cisco devices
