--- a/examples/02_type_annotations/mypy.ini
+++ b/examples/02_type_annotations/mypy.ini
@@ -1,4 +1,4 @@
 [mypy]
 
-#[mypy-pyneng_cli_course.*]
-#ignore_missing_imports = True
+# [mypy-advpyneng_cli_course.*]
+# ignore_missing_imports = True
